--- a/index.html
+++ b/index.html
@@ -1,35 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Solar Cooling Innovation</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
     <header>
-        <h1>Solar-Powered Portable Air Conditioning</h1>
-        <p>Innovative Cooling Solutions for Torrid areas in Ghana</p>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#intro">Meet Our Innovator</a></li>
+                <li><a href="#products">Our Products</a></li>
+                <li><a href="#solution">Solution</a></li>
+                <li><a href="#support">Support</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <section id="home">
+            <div>
+                <h1>Solar-Powered Portable Air Conditioning</h1>
+                <p>Innovative Cooling Solutions for Hot Areas in Ghana</p>
+            </div>
+        </section>
+
     </header>
-    <section class="intro">
-        <h2>Meet the Innovator</h2>
-        <p>Ayeiri Salifu Abdalla, a young entrepreneur from <strong>Sunyani West</strong> in the <strong>Bono Region</strong>, is on a mission to tackle extreme heat in Ghana. 
-        <br>He is developing a sustainable cooling solution designed specifically for rural areas, with a focus on communities that have limited access to electricity.</p>
+
+    <section id="intro">
+        <div id="intro_text">
+            <p>
+            <h2 id="title">Meet the Innovator</h2>
+            A young entrepreneur from Sunyani West, Bono Region, has developed a <br> sustainable cooling solution
+            to combat extreme heat in rural areas with <br>
+            limited electricity access. Using locally sourced materials and renewable <br>energy, such as solar
+            power and evaporative cooling,
+            the innovation <br>provides an affordable, eco-friendly alternative to conventional air
+            <br>conditioning. The solution aims
+            to improve living conditions, food <br>preservation, and comfort in homes, schools, and healthcare
+            facilities. <br>Gaining interest from
+            local authorities and investors, the entrepreneur seeks <br> partnerships to scale the project and
+            enhance its impact in underserved communities.
+            </p>
+        </div>
+        <div id="pic">
+            <img src="./images/man1.jpg" alt="innovators image">
+        </div>
     </section>
-    <section class="solution">
+
+    <section id="products">
+        <h2>Our Products</h2>
+        <div id="products_gallery">
+            <img src="./images/ac.jpg" alt="">
+            <img src="./images/ac2.jpg" alt="">
+            <img src="./images/ac3.jpg" alt="">
+            <img src="./images/ac4.jpg" alt="">
+        </div>
+    </section>
+
+    <section id="solution">
         <h2>Our Solution</h2>
-        <p>This project provides <strong>affordable and sustainable cooling options</strong>, improving health, productivity, and daily operations.</p>
-        <p>Key focus areas:</p>
-        <ul>
+        <p>This project provides affordable and sustainable cooling solutions that improve health, boost productivity,
+            and enhance daily operations.
+            By reducing heat-related illnesses and creating comfortable environments, it supports work efficiency, food
+            preservation, and healthcare facilities. The initiative promotes economic growth,
+            environmental <br> sustainability, and overall well-being in underserved communities.
+        <p id="focus"><strong>Key focus areas:</strong></p>
+        <ul id="solution_list">
             <li><strong>Energy Efficiency</strong></li>
             <li><strong>Local Manufacturing</strong></li>
             <li><strong>Community Involvement</strong></li>
         </ul>
     </section>
-    <section class="support">
+
+    <section id="support">
         <h2>We Need Your Support</h2>
         <p>To develop and scale this solar-powered cooling system, we seek:</p>
-        <ul>
+        <ul id="support_list">
             <li><strong>Financial Support</strong></li>
             <li><strong>Technical Guidance</strong></li>
             <li><strong>Capacity-Building Resources</strong></li>
@@ -38,8 +87,12 @@
         <button onclick="contactUs()">Get Involved</button>
     </section>
     <footer>
+        <div id="contact">
+            <h2>Contact</h2>
+        </div>
         <p>Designed with passion to inspire change. &copy; 2025</p>
     </footer>
-    <script src="script.js"></script>
+
 </body>
+
 </html>
