html, css restyled

--- a/index.html
+++ b/index.html
@@ -9,90 +9,98 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#intro">Meet Our Innovator</a></li>
-                <li><a href="#products">Our Products</a></li>
-                <li><a href="#solution">Solution</a></li>
-                <li><a href="#support">Support</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <section id="home">
-            <div>
-                <h1>Solar-Powered Portable Air Conditioning</h1>
-                <p>Innovative Cooling Solutions for Hot Areas in Ghana</p>
+    <nav class="navbar">
+        <div class="navbar_container">
+            <a href="#main" id="navbar_logo">SPPAC</a>
+            <div class="navbar_toggle" id="mobile_menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
             </div>
-        </section>
-
-    </header>
-
-    <section id="intro">
-        <div id="intro_text">
-            <p>
-            <h2 id="title">Meet the Innovator</h2>
-            A young entrepreneur from Sunyani West, Bono Region, has developed a <br> sustainable cooling solution
-            to combat extreme heat in rural areas with <br>
-            limited electricity access. Using locally sourced materials and renewable <br>energy, such as solar
-            power and evaporative cooling,
-            the innovation <br>provides an affordable, eco-friendly alternative to conventional air
-            <br>conditioning. The solution aims
-            to improve living conditions, food <br>preservation, and comfort in homes, schools, and healthcare
-            facilities. <br>Gaining interest from
-            local authorities and investors, the entrepreneur seeks <br> partnerships to scale the project and
-            enhance its impact in underserved communities.
-            </p>
+            <ul class="navbar_menu">
+                <li class="navbar_item">
+                    <a href="#main" class="navbar_links">Home</a>
+                </li>
+                <li class="navbar_item">
+                    <a href="#innovator" class="navbar_links">Innovator</a>
+                </li>
+                <li class="navbar_item">
+                    <a href="#products" class="navbar_links">Products</a>
+                </li>
+                <li class="navbar_item">
+                    <a href="" class="navbar_links">Contact Us</a>
+                </li>
+            </ul>
         </div>
-        <div id="pic">
-            <img src="./images/man1.jpg" alt="innovators image">
+    </nav>
+
+    <!-- Header -->
+    <div id="main">
+        <div class="main_container">
+            <div class="main_content">
+                <h1>SOLAR-POWERED PORTABLE </h1>
+                <h2>AIR-CONDITIONER</h2>
+                <P>Innovative cooling solution at its finest</P>
+                <button class="main_btn"><a href="#products">Explore</a></button>
+            </div>
         </div>
-    </section>
+    </div>
 
-    <section id="products">
-        <h2>Our Products</h2>
-        <div id="products_gallery">
-            <img src="./images/ac.jpg" alt="">
-            <img src="./images/ac2.jpg" alt="">
-            <img src="./images/ac3.jpg" alt="">
-            <img src="./images/ac4.jpg" alt="">
+    <!-- Innovator section -->
+     <div id="innovator">
+        <div class="innovator_container">   
+        <div class="innovator_text">
+            <h1> Innovator</h1>
+            <p>Ayeiri Salifu Abdalla, a young entrepreneur from Sunyani West, Bono Region, has developed a sustainable cooling solution
+                to combat extreme heat in rural areas with limited electricity access. Using locally sourced materials and renewable energy, such as solar
+                power and evaporative cooling,
+                the innovation provides an affordable, eco-friendly alternative to conventional air
+                conditioning. The solution aims
+                to improve living conditions, food preservation, and comfort in homes, schools, and healthcare
+                facilities. Gaining interest from
+                local authorities and investors, the entrepreneur seeks partnerships to scale the project and
+                enhance its impact in underserved communities.</p>
+         </div>
+         <div class="innovator_img">
+            <img src="./images/man1.jpg" alt="">
         </div>
-    </section>
-
-    <section id="solution">
-        <h2>Our Solution</h2>
-        <p>This project provides affordable and sustainable cooling solutions that improve health, boost productivity,
-            and enhance daily operations.
-            By reducing heat-related illnesses and creating comfortable environments, it supports work efficiency, food
-            preservation, and healthcare facilities. The initiative promotes economic growth,
-            environmental <br> sustainability, and overall well-being in underserved communities.
-        <p id="focus"><strong>Key focus areas:</strong></p>
-        <ul id="solution_list">
-            <li><strong>Energy Efficiency</strong></li>
-            <li><strong>Local Manufacturing</strong></li>
-            <li><strong>Community Involvement</strong></li>
-        </ul>
-    </section>
-
-    <section id="support">
-        <h2>We Need Your Support</h2>
-        <p>To develop and scale this solar-powered cooling system, we seek:</p>
-        <ul id="support_list">
-            <li><strong>Financial Support</strong></li>
-            <li><strong>Technical Guidance</strong></li>
-            <li><strong>Capacity-Building Resources</strong></li>
-        </ul>
-        <p>Join us in fostering innovation and making a lasting impact.</p>
-        <button onclick="contactUs()">Get Involved</button>
-    </section>
-    <footer>
-        <div id="contact">
-            <h2>Contact</h2>
         </div>
-        <p>Designed with passion to inspire change. &copy; 2025</p>
-    </footer>
+     </div>
 
+     <!-- Products -->
+      <div id="products">
+        <h1> Discover amazing solar-powered products</h1>
+        <div class="products_container">
+            <div class="product_card">
+                <h2>Camp rock</h2>
+                <p>A portable solar-powered air conditioner designed for camping and outdoor use.</p>
+            </div>
+            <div class="product_card">
+                <h2>Car-condition</h2>
+                <p>A sleek solor-powered AC for eco-friendly cars.</p>
+            </div>
+            <div class="product_card">
+                <h2>Giant mount</h2>
+                <p>Large-scale solar AC system for commercial buildings.</p>
+            </div>
+            <div class="product_card">
+                <h2>Home based</h2>
+                <p> solar-powered AC for off-grid rural homes.</p>
+            </div>
+            <div class="product_card">
+                <h2>Home based</h2>
+                <p> solar-powered AC for off-grid rural homes.</p>
+            </div>
+            <div class="product_card">
+                <h2>Home based</h2>
+                <p> solar-powered AC for off-grid rural homes.</p>
+            </div>
+            
+            </div>
+        </div>
+      </div>
+
+    <script src="sppac.js"></script>
 </body>
 
 </html>
