--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     <a href="#container_products" class="navbar_links">Products</a>
                 </li>
                 <li class="navbar_item">
+                    <a href="#services" class="navbar_links">Services</a>
+                </li>
+                <li class="navbar_item">
                     <a href="#contact_wrapper" class="navbar_links">Contact Us</a>
                 </li>
             </ul>
@@ -86,6 +89,34 @@
             </button>
         </div>
     </div>
+
+<!--services section-->
+    <div id="services">
+        <h3>Services we render</h3>
+        <div class="service_wrap">
+            <div class="service_grid">
+                <i class="icon fa-regular fa-circle-check"></i>
+                <h5>Consultant on renewable energy  Management </h5>
+                <p>"Providing expert guidance on renewable energy solutions, including solar power system design, installation, and maintenance to ensure sustainable and efficient energy use.</p>
+            </div>
+            <div class="service_grid">
+                <i class="icon fa-regular fa-circle-check"></i>
+                <h5>Project Research, and Management services</h5>
+                <p>"Offering in-depth research and professional project management services to ensure successful planning, execution, and completion of renewable energy and technology projects."</p>
+            </div>
+            <div class="service_grid">
+                <i class="icon fa-regular fa-circle-check"></i>
+                <h5>PLC, IoT and embedded system development services</h5>
+                <p>"Designing and developing advanced automation solutions using PLCs, IoT, and embedded systems to enhance efficiency, connectivity, and control in industrial and smart technology applications."</p>
+            </div>
+            <div class="service_grid">
+                <i class="icon fa-regular fa-circle-check"></i>
+                <h5>General electrical installation, and electronics components management services</h5>
+                <p>"Providing expert electrical installation services and efficient management of electronic components to ensure safe, reliable, and high-performance electrical systems for homes and businesses."</p>
+            </div>
+        </div>
+    </div>
+
 
     <!--contact section-->
     <div id="contact_wrapper">
