--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <!--services section-->
     <div id="services">
-        <h3>Services we render</h3>
+        <h3>Services We Render</h3>
         <div class="service_wrap">
             <div class="service_grid">
                 <i class="icon fa-regular fa-circle-check"></i>
