--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <P>Innovative cooling solution at its finest</P>
                 <button class="main_btn"><a href="#container_products">Explore</a></button>
             </div>
-            <div class="main_img_container">
+            <!-- <div class="main_img_container">
                 <img src="images/sp1.webp" alt="" id="main_img">
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -97,22 +97,22 @@
             <div class="service_grid">
                 <i class="icon fa-regular fa-circle-check"></i>
                 <h5>Consultant on renewable energy  Management </h5>
-                <p>"Providing expert guidance on renewable energy solutions, including solar power system design, installation, and maintenance to ensure sustainable and efficient energy use.</p>
+                <p>Providing expert guidance on renewable energy solutions, including solar power system design, installation, and maintenance to ensure sustainable and efficient energy use.</p>
             </div>
             <div class="service_grid">
                 <i class="icon fa-regular fa-circle-check"></i>
                 <h5>Project Research, and Management services</h5>
-                <p>"Offering in-depth research and professional project management services to ensure successful planning, execution, and completion of renewable energy and technology projects."</p>
+                <p>Offering in-depth research and professional project management services to ensure successful planning, execution, and completion of renewable energy and technology projects.</p>
             </div>
             <div class="service_grid">
                 <i class="icon fa-regular fa-circle-check"></i>
                 <h5>PLC, IoT and embedded system development services</h5>
-                <p>"Designing and developing advanced automation solutions using PLCs, IoT, and embedded systems to enhance efficiency, connectivity, and control in industrial and smart technology applications."</p>
+                <p>Designing and developing advanced automation solutions using PLCs, IoT, and embedded systems to enhance efficiency, connectivity, and control in industrial and smart technology applications.</p>
             </div>
             <div class="service_grid">
                 <i class="icon fa-regular fa-circle-check"></i>
                 <h5>General electrical installation, and electronics components management services</h5>
-                <p>"Providing expert electrical installation services and efficient management of electronic components to ensure safe, reliable, and high-performance electrical systems for homes and businesses."</p>
+                <p>Providing expert electrical installation services and efficient management of electronic components to ensure safe, reliable, and high-performance electrical systems for homes and businesses.</p>
             </div>
         </div>
     </div>
